tests/compile_fail/ignore_list_form.rs
#[skuld::test]
#[ignore("reason")]
fn ignore_list_form() {}

fn main() {}
